examples/todo-app/frontend/react-redux/app/js/actions/constants.js
// error
export const ERROR = 'ERROR';
export const RESET_ERROR = 'RESET_ERROR';

// todos
export const CREATE_TODO = 'CREATE_TODO';
export const GET_TODOS = 'GET_TODOS';
export const GET_TODO = 'GET_TODO';
export const UPDATE_TODO = 'UPDATE_TODO';
export const DELETE_TODO = 'DELETE_TODO';
